# cobridge

./: .ament_copyright_ignore  .ament_uncrustify_ignore  .gitignore  .uncrustify.cfg  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  apt-ftparchive.conf  package.xml  patch_apply.sh  patch_generate.sh  patch_revert.sh
.github/workflows/: build-and-test.yaml  build-deb.yaml  build-image.yaml  lint.yaml
cobridge_base/include/: base64.hpp  callback_queue.hpp  cobridge.hpp  common.hpp  message_definition_cache.hpp  parameter.hpp  regex_utils.hpp  serialization.hpp  server_factory.hpp  server_interface.hpp  standard.hpp  websocket_client.hpp  websocket_logging.hpp  websocket_notls.hpp  websocket_server.hpp  websocket_tls.hpp
cobridge_base/include/test/: test_client.hpp
cobridge_base/src/: base64.cpp  cobridge.cpp  parameter.cpp  serialization.cpp  server_factory.cpp
cobridge_base/src/test/: test_client.cpp
cobridge_base/tests/: serialization_test.cpp  version_test.cpp
cobridge_subprotocol/: cobridge_websocket_subprotocol.md
docker_files/: foxy.Dockerfile  humble.Dockerfile  indigo.Dockerfile  jazzy.Dockerfile  melodic.Dockerfile  noetic.Dockerfile  rolling.Dockerfile
docs/: ROS2_ROLLING_SUPPORT_ANALYSIS.md
http_server/include/: http_server.h
http_server/src/: http_server.cpp
patches/: connection_hpp-fix.patch  connection_impl_hpp-fix.patch  description_provider_cpp-fix.patch  enabled_hpp-fix.patch  endpoint_impl_hpp-fix.patch  integrated_description_provider_cpp-fix.patch  md5_hpp-fix.patch  message_template_h-fix.patch  series  sha1_hpp-fix.patch  tls_hpp-fix.patch
ros1_bridge/include/: generic_service.hpp  param_utils.hpp  service_utils.hpp
ros1_bridge/launch/: cobridge.launch
ros1_bridge/src/: param_utils.cpp  ros1_bridge_node.cpp  ros1_bridge_nodelet.cpp  service_utils.cpp
ros1_bridge/tests/: smoke_test.cpp
ros2_bridge/include/: create_generic_publisher.hpp  create_generic_subscription.hpp  generic_client.hpp  generic_publisher.hpp  generic_subscription.hpp  param_utils.hpp  parameter_interface.hpp  ros2_bridge.hpp  typesupport_helpers.hpp  utils.hpp
ros2_bridge/src/: generic_client.cpp  generic_publisher.cpp  generic_subscription.cpp  message_definition_cache.cpp  param_utils.cpp  parameter_interface.cpp  ros2_bridge.cpp  ros2_bridge_node.cpp  typesupport_helpers.cpp
ros2_bridge/tests/: smoke_test.cpp
